<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <RelativeLayout
            android:id="@+id/rl_person_info"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/bg_person">

            <com.jb.vmeeting.page.custom.CircleImageView
                android:id="@+id/img_person_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/tv_person_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_person_avatar"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:textSize="@dimen/text_size_large"
                android:text="Nick Name"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <!--<ImageView
                    android:id="@+id/icon_person_about"
                    style="@style/Person_Option_Icon"
                    android:src="@mipmap/ic_launcher" />-->
                <TextView
                    style="@style/Person_Option_Text"

                    android:text="@string/text_person_about"/>
                <!--android:layout_toRightOf="@+id/icon_person_about"-->
            </RelativeLayout>

            <include layout="@layout/line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <!--<ImageView
                    android:id="@+id/icon_person_feedback"
                    style="@style/Person_Option_Icon"
                    android:src="@mipmap/ic_launcher" />-->
                <TextView
                    style="@style/Person_Option_Text"

                    android:text="@string/text_person_feedback"/>
                <!--android:layout_toRightOf="@+id/icon_person_feedback"-->
            </RelativeLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btn_person_logout"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_logout" />
    </LinearLayout>
</ScrollView>