<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="@color/appBg">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/tv_user_modify_username"
        style="@style/Text_User_Update.Small"
        tools:text="username:haha"
        android:layout_margin="10dp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/row_user_modify_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:onClick="modifyAvatar">
                <TextView
                    style="@style/Text_User_Update.Primary"
                    android:text="@string/text_user_modify_avatar"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"/>

                <ImageView
                    android:id="@+id/img_user_modify_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <include layout="@layout/line" />

            <RelativeLayout
                android:id="@+id/row_user_modify_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="modifyNickName"
                android:padding="10dp">
                <TextView
                    style="@style/Text_User_Update.Primary"
                    android:text="@string/text_user_modify_nickname"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/tv_user_modify_nickname"
                    style="@style/Text_User_Update.Sub"
                    android:text="@string/text_user_modify_nickname"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <include layout="@layout/line" />

            <RelativeLayout
                android:id="@+id/row_user_modify_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="modifyPhoneNumber"
                android:padding="10dp">
                <TextView
                    style="@style/Text_User_Update.Primary"
                    android:text="@string/text_user_modify_phone"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/tv_user_modify_phone"
                    style="@style/Text_User_Update.Sub"
                    android:text="@string/text_user_modify_phone"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>